--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -11,7 +11,7 @@
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:resize_mode="zoom"
+        app:resize_mode="fit"
         app:show_buffering="when_playing"
         app:use_controller="false"
         app:surface_type="surface_view"
@@ -34,7 +34,6 @@
         android:layout_gravity="bottom"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="@drawable/gradient_overlay_bottom"
         android:visibility="gone">
 
         <TextView
