--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,97 +9,98 @@
      android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.MaterialToolbar
-         android:layout_height="?attr/actionBarSize"
-         android:layout_width="match_parent"
-         android:paddingEnd="@dimen/spacing_standard"
-         android:background="@color/youtube_background_black"
-         android:elevation="4dp"
-         app:layout_constraintTop_toTopOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         android:paddingStart="@dimen/spacing_standard"
-         android:id="@+id/toolbar">
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/youtube_background_black"
+        android:elevation="4dp"
+        android:paddingStart="@dimen/spacing_standard"
+        android:paddingEnd="@dimen/spacing_standard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-             android:layout_height="match_parent"
-             android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <ImageView
-                 android:layout_height="@dimen/logo_height"
-                 android:layout_width="@dimen/logo_width"
-                 android:contentDescription="@string/content_description_youtube_logo"
-                 android:scaleType="centerCrop"
-                 android:src="@drawable/youtube_title"
-                 app:layout_constraintTop_toTopOf="parent"
-                 app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 android:id="@+id/iv_logo" />
+                android:id="@+id/iv_logo"
+                android:layout_width="@dimen/logo_width"
+                android:layout_height="@dimen/logo_height"
+                android:contentDescription="@string/content_description_youtube_logo"
+                android:scaleType="centerCrop"
+                android:src="@drawable/youtube_title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                 android:layout_height="@dimen/icon_touch_target"
-                 android:layout_width="@dimen/icon_touch_target"
-                 android:layout_marginEnd="@dimen/spacing_tiny"
-                 android:src="@drawable/ic_cast_24"
-                 android:padding="@dimen/icon_padding_medium"
-                 app:layout_constraintEnd_toStartOf="@id/fl_notification"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 android:contentDescription="@string/content_description_cast"
-                 android:scaleType="fitCenter"
-                 android:background="?attr/selectableItemBackgroundBorderless"
-                 app:layout_constraintTop_toTopOf="parent"
-                 app:tint="@color/youtube_icon_white"
-                 android:id="@+id/btn_cast" />
+                android:id="@+id/btn_cast"
+                android:layout_width="@dimen/icon_touch_target"
+                android:layout_height="@dimen/icon_touch_target"
+                android:layout_marginEnd="@dimen/spacing_tiny"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/content_description_cast"
+                android:padding="@dimen/icon_padding_medium"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_cast_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/fl_notification"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/youtube_icon_white" />
 
             <FrameLayout
-                 android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                 android:layout_marginEnd="@dimen/spacing_tiny"
-                 app:layout_constraintTop_toTopOf="parent"
-                 app:layout_constraintEnd_toStartOf="@id/btn_search"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 android:id="@+id/fl_notification">
+                android:id="@+id/fl_notification"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_tiny"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_search"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageButton
-                     android:layout_height="@dimen/icon_touch_target"
-                     android:layout_width="@dimen/icon_touch_target"
-                     android:contentDescription="@string/content_description_notifications"
-                     android:src="@drawable/ic_notifications_24"
-                     android:scaleType="fitCenter"
-                     android:background="?attr/selectableItemBackgroundBorderless"
-                     android:padding="@dimen/icon_padding_standard"
-                     app:tint="@color/youtube_icon_white"
-                     android:id="@+id/btn_notification" />
+                    android:id="@+id/btn_notification"
+                    android:layout_width="@dimen/icon_touch_target"
+                    android:layout_height="@dimen/icon_touch_target"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/content_description_notifications"
+                    android:padding="@dimen/icon_padding_standard"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_notifications_24"
+                    app:tint="@color/youtube_icon_white" />
 
                 <TextView
-                     android:layout_height="@dimen/badge_size"
-                     android:layout_width="@dimen/badge_size"
-                     android:visibility="visible"
-                     android:layout_marginEnd="@dimen/badge_margin_end"
-                     android:textSize="@dimen/text_size_badge"
-                     android:textColor="@color/youtube_white"
-                     android:layout_marginTop="@dimen/badge_margin_top"
-                     android:layout_gravity="top|end"
-                     android:background="@drawable/bg_notification_badge"
-                     android:gravity="center"
-                     android:id="@+id/tv_badge"
-                     android:text="@string/notification_count_9_plus"
-                     android:textStyle="bold" />
+                    android:id="@+id/tv_badge"
+                    android:layout_width="@dimen/badge_size"
+                    android:layout_height="@dimen/badge_size"
+                    android:layout_gravity="top|end"
+                    android:layout_marginTop="@dimen/badge_margin_top"
+                    android:layout_marginEnd="@dimen/badge_margin_end"
+                    android:background="@drawable/bg_notification_badge"
+                    android:gravity="center"
+                    android:text="@string/notification_count_9_plus"
+                    android:textColor="@color/youtube_white"
+                    android:textSize="@dimen/text_size_badge"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
 
             </FrameLayout>
 
             <ImageButton
-                 android:layout_height="@dimen/icon_touch_target"
-                 android:layout_width="@dimen/icon_touch_target"
-                 android:contentDescription="@string/content_description_search"
-                 android:src="@drawable/ic_search_24"
-                 android:scaleType="fitCenter"
-                 android:background="?attr/selectableItemBackgroundBorderless"
-                 app:layout_constraintTop_toTopOf="parent"
-                 android:padding="@dimen/icon_padding_standard"
-                 app:tint="@color/youtube_icon_white"
-                 app:layout_constraintEnd_toEndOf="parent"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 android:id="@+id/btn_search" />
+                android:id="@+id/btn_search"
+                android:layout_width="@dimen/icon_touch_target"
+                android:layout_height="@dimen/icon_touch_target"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/content_description_search"
+                android:padding="@dimen/icon_padding_standard"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_search_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/youtube_icon_white" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
