--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,8 +21,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="32dp"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="@string/app_icon_description" />
+            android:src="@mipmap/ic_launcher" />
 
         <!-- App Name -->
         <TextView
