--- a/app/src/main/res/layout/fragment_you.xml
+++ b/app/src/main/res/layout/fragment_you.xml
@@ -187,8 +187,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="space_evenly">
+            android:orientation="horizontal">
 
             <!-- Watch Later -->
             <LinearLayout
